...
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.hvl.nameapp.AddPersonActivity"
    android:id="@+id/add_person_layout"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
