<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ListNamesActivity"
    android:id="@+id/list_names_layout"

    >
<LinearLayout
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ListView
        android:id="@+id/list_view"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:drawSelectorOnTop="false"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>

    <ImageButton
        android:id="@+id/pluss_button"
        android:contentDescription="@string/pluss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="addPerson"
        app:srcCompat="@android:drawable/ic_input_add" />

</RelativeLayout>